--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -3,39 +3,16 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <ion-list class="padding">
-          <ion-list-item>
-        <h3>{{result[1].name}}</h3>
-              <ion-checkbox>{{result[1].extra.items.split('\r\n')[0].split('|')[1]}}</ion-checkbox>
-              <ion-checkbox>{{result[1].extra.items.split('\r\n')[1].split('|')[1]}}</ion-checkbox>
-              </ion-list-item>
-              <ion-list-item>
-        <h3>{{result[3].name}}</h3>
-        <ion-checkbox>{{result[3].extra.items.split('\r\n')[0].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[3].extra.items.split('\r\n')[1].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[3].extra.items.split('\r\n')[2].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[3].extra.items.split('\r\n')[3].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[3].extra.items.split('\r\n')[4].split('|')[1]}}</ion-checkbox>
-              </ion-list-item>
-    <ion-list-item>
-        <h3>{{result[4].name}}</h3>
-        <ion-checkbox>{{result[4].extra.items.split('\r\n')[0].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[4].extra.items.split('\r\n')[1].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[4].extra.items.split('\r\n')[2].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[4].extra.items.split('\r\n')[3].split('|')[1]}}</ion-checkbox>
-        <ion-checkbox>{{result[4].extra.items.split('\r\n')[4].split('|')[1]}}</ion-checkbox>
-              </ion-list-item>
-    </ion-list>
-
-
-            <ion-list><ion-list-item ng-repeat="(key, val) in result">
-              <h1>Question {{val.cid}}</h1>
-              <h3 ng-bind-html="val.name">{{val.name}}</h3>
-              <h4>{{val.type}}</h4>
-              <ion-checkbox ng-repeat="items in val.extra.items.split('\r\n')">{{val.extra.items.split('\r\n')[$index].split('|')[1]}}</ion-checkbox>
-            </ion-list-item>
+            <ion-list><ion-list-item ng-repeat="question in result">
+              <h1>Question {{question.cid}}</h1>
+              <h3 ng-bind-html="question.name">{{question.name}}</h3>
+              <h4>{{question.type}}</h4>
+              <ion-checkbox ng-repeat="item in question.extra.items.split('\r\n')" ng-model="question.clicked">
+                {{question.extra.items.split('\r\n')[$index].split('|')[1]}}
+              </ion-checkbox>
+              <div class="item">
+           is it checked? {{ allanswers }}
+         </div></ion-list-item>
           </ion-list>
-
-
   </ion-content>
 </ion-view>
