--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -3,6 +3,25 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
+<ion-list>
+  <ion-list-item ng-repeat="question in result">
+    <h1>Question {{question.name}}</h1>
+    <ion-checkbox ng-repeat="answer in answerandkey">
+      {{answer[1]}}
+    </ion-checkbox>
+    <ion-checkbox>
+      {{answerandkey[5][1]}}
+    </ion-checkbox>
+  </ion-list-item>
+  <ion-list>
+
+
+
+
+
+
+
+
             <ion-list><ion-list-item ng-repeat="question in result">
               <h1>Question {{question.cid}}</h1>
               <h3 ng-bind-html="question.name">{{question.name}}</h3>
@@ -11,8 +30,11 @@
                 {{question.extra.items.split('\r\n')[$index].split('|')[1]}}
               </ion-checkbox>
               <div class="item">
-           is it checked? {{ allanswers }}
-         </div></ion-list-item>
-          </ion-list>
+           is it checked? {{allanswers[$index]}}
+         </div>
+       </ion-list-item>
+     </ion-list>
+   -->
+
   </ion-content>
 </ion-view>
