--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -3,18 +3,20 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
+
+<!--
 <ion-list>
   <ion-list-item ng-repeat="question in result">
     <h1>Question {{question.name}}</h1>
     <ion-checkbox ng-repeat="answer in answerandkey">
-      {{answer[1]}}
+      {{answerandkey[2][1]}}
     </ion-checkbox>
     <ion-checkbox>
       {{answerandkey[5][1]}}
     </ion-checkbox>
   </ion-list-item>
   <ion-list>
-
+-->
 
 
 
@@ -27,14 +29,13 @@
               <h3 ng-bind-html="question.name">{{question.name}}</h3>
               <h4>{{question.type}}</h4>
               <ion-checkbox ng-repeat="item in question.extra.items.split('\r\n')" ng-model="question.clicked">
-                {{question.extra.items.split('\r\n')[$index].split('|')[1]}}
+                {{allanswers.items.split('|')[1]}}
               </ion-checkbox>
               <div class="item">
            is it checked? {{allanswers[$index]}}
          </div>
        </ion-list-item>
      </ion-list>
-   -->
 
   </ion-content>
 </ion-view>
