--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -9,6 +9,10 @@
         <ion-checkbox ng-repeat="values in item.values" ng-show = "item.type == 'select'">
           {{values}}
         </ion-checkbox>
+        <label ng-repeat="values in item.values" ng-show = "item.type == 'number'" class="item item-input">
+            <span class="input-label">Number</span>
+              <input type="tel">
+        </label>
       </ion-list-item>
     </ion-list>
   </ion-content>
